# Tresto

./: .env.example  .gitignore  .pre-commit-config.yaml  PLANS.md  README.md  pyproject.toml  test_header_example.py
.github/workflows/: ci.yml  publish.yml
docs/: CONTRIBUTING.md  README.md  architecture.md  implementation-status.md  release.md
src/tresto/: __init__.py  cli.py  config.py
src/tresto/ai/: __init__.py  agent.py
src/tresto/ai/agent/: agent.py  graph.py  state.py
src/tresto/ai/agent/prompts/: __init__.py
src/tresto/ai/agent/state/: __init__.py
src/tresto/ai/agent/tools/: __init__.py  ask_user.py  deside_next_action.py  generate.py  inspect.py  list_directory.py  playwright_codegen.py  playwright_iterate.py  read_file_content.py  run_test.py  screenshot.py  screenshot_inspect.py
src/tresto/ai/agent/tools/html_inspect/: __init__.py  execution.py  models.py  recording.py
src/tresto/ai/connectors/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/tresto/ai/connectors/anthropic/: connector.py
src/tresto/ai/connectors/codex/: __init__.py  chat_model.py  connector.py  settings.py
src/tresto/ai/connectors/openai/: connector.py
src/tresto/ai/connectors/test/: __init__.py  chat_model.py  connector.py  settings.py
src/tresto/ai/models/: rich_formattable.py
src/tresto/ai/prompts/: __init__.py  codegen.md  create_test.md  main.md  system.md
src/tresto/commands/: db.py  hello.py  init.py  record.py  scaffold.py  version.py
src/tresto/commands/models/: list.py
src/tresto/commands/test/: __init__.py  create.py  implement.py  iterate.py  run.py
src/tresto/core/: config.py  database.py  file_header.py  recorder.py  runner.py  scaffold.py  test.py
src/tresto/core/config/: main.py
src/tresto/core/test/: __init__.py  errors.py  extract.py  models.py  run.py  screenshot.py  utils.py
src/tresto/prompts/: __init__.py  main.txt
src/tresto/utils/: __init__.py  repetition.py
src/tresto/utils/credentials/: __init__.py  codex.py  errors.py  manager.py  oidc.py  openai.py  store.py  strategy.py
test_project/: index.html
test_project/src/components/: LoginForm.jsx  TaskManager.css  TaskManager.jsx
tests/: __init__.py  test_cli.py  test_config.py
tests/ai/: test_codex_connector.py
tests/ai/agent/: test_agent_max_lines.py  test_state.py
tests/ai/agent/tools/: test_generate.py  test_html_inspect_recording_tools.py  test_integration.py  test_recording_manager_from_trace.py
tests/commands/: test_implement_cli.py  test_init_cli.py  test_scaffold_cli.py  test_test_create_cli.py
tests/core/: test_header.py  test_pathfinder.py  test_scaffold.py
tests/e2e/: __init__.py  conftest.py  test_create_command.py  test_full_workflow.py  test_init_command.py  test_main_command.py  test_models_command.py  test_utils.py  test_version_command.py  utils.py
tests/e2e/utils/: __init__.py  commands.py  mocks.py
tests/utils/: test_credentials.py
(+27 files in other folders)
